# commit-msg-validator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  commit_message.txt  pyproject.toml
.github/workflows/: codcov.yaml
hook/check-commit-msg/: __init__.py
hooks/: check_commit_msg.py
tests/: __init__.py  test_check_commit_msg.py
