[tool.poetry]
name = "commit-msg-validator"
version = "0.1.0"
description = "A hook for pre-commit package to validate commit message"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-commit-msg = "hooks.check-commit-msg.hook:main"
