[tool.poetry]
name = "commit-msg-validator"
version = "1.1.0"
description = "A hook for pre-commit package to validate commit message"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "MIT"
packages = [
    {include = "hooks"},
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-commit-msg = "hooks.check_commit_msg:main"
